2006-01-19  Rodney Dawe  <dobey@novell.com>

	* legacy-icon-mapping.xml: Move gtk-delete and stock_delete to be
	links to the edit-delete icon rather than user-trash

2006-01-19  Niko Mirthes <nmirthes@gmail.com>

	* legacy-icon-mapping.xml: More KDE icon link additions
	
2006-01-19  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Map the legacy MIME type icons for SMB
	browsing in GNOME

	Fixes https://bugs.freedesktop.org/show_bug.cgi?id=5541

2006-01-19  Sebastien Bacher <seb128@debian.org>

	* legacy-icon-mapping.xml: Fix typo in starwriter MIME type link

	Fixes https://bugs.freedesktop.org/show_bug.cgi?id=5598

2006-01-19  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Add links for night weather images

2006-01-13  Rodney Dawes  <dobey@novell.com>

	* configure.ac: Up version to 0.6.5 for release

2006-01-13  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Add a bunch of links for gnome-icon-theme

2006-01-13  Niko Mirthes  <nmirthes@gmail.com>

	* legacy-icon-mapping.xml: Updates for more KDE icons

2006-01-13  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Add links for x-office-calendar and
	x-office-presentation
	Link gnome-mime-application-x-killustrator to image-x-generic
	Link folder_tar to package-x-generic
	Link package_editors to text-x-generic
	Link contents2 to x-office-address-book

2006-01-13  Eskil Bylund <eskil@letterboxes.org>

	* legacy-icon-mapping.xml: Add links for edit-find-replace, list-*,
	and more stock mail icons
	Link system-config-users to system-users
	Link redhat-system_tools to applications-system
	Link redhat-system_settins to preferences-system
	
2006-01-06  Rodney Dawes  <dobey@novell.com>

	* configure.ac: Up version to 0.6.3 for release
	Update copyright year to include 2006

	* icon-name-mapping.pl.in: Update copyright year to include 2006
	
2006-01-06  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Some update for KDE icons (Niko Mirthes)